Версия: однозвенное приложение с использованием MongoDB

--- a/source/templates/detail.ejs
+++ b/source/templates/detail.ejs
@@ -3,7 +3,7 @@
     <%if (todo.desc){%>
         <p><%= todo.desc %></p>
     <%}%>
-    <p class="datetime">Создано: <br><%= (new Date(todo.createdAt).toLocaleString()) %></p>
+    <p class="datetime">Создано: <br><%= todo.createdAt.toLocaleString() %></p>
     <% if (todo.addendum) {%>
         <p class="addendum">
             <img src="/uploaded/<%= todo.addendum %>">
