--- a/source/templates/main.ejs
+++ b/source/templates/main.ejs
@@ -35,7 +35,7 @@
                 <% if (t.desc){ %>
                     <p><%=t.desc%></p>
                 <% } %>
-                <p class="datetime"><%= (new Date(t.createdAt).toLocaleString())%></p>
+                <p class="datetime"><%= t.createdAt.toLocaleString() %></p>
                 <div class="horizontal">
                     <% if (!t.done) {%>
                         <form action="/<%= t._id %>?_method=PUT" method="post">
